tests/ui/error-codes/E0520.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/E0520.rs:1:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete
   = note: `#[warn(incomplete_features)]` on by default

error[E0520]: `fly` specializes an item from a parent `impl`, but that item is not marked `default`
  --> $DIR/E0520.rs:17:5
   |
LL | impl<T: Clone> SpaceLlama for T {
   | ------------------------------- parent `impl` is here
...
LL |     default fn fly(&self) {}
   |     ^^^^^^^^^^^^^^^^^^^^^ cannot specialize default item `fly`
   |
   = note: to specialize, `fly` in the parent `impl` must be marked `default`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0520`.
